# AiAlchemy

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  makefile.prompt  roadmap.md
ai-alchemy/: README.md  mypy.ini  pyproject.toml
ai-alchemy/ai_alchemy/: __init__.py  ai.py  cast.py  core.py  server.py
ai-alchemy/ai_alchemy/core/: ai.py  cast.py  example.py
ai-alchemy/tests/: test_cast.py  test_core.py  test_transform.py
ai-alchemy/tests/core/: test_cast.py  test_complex_cast.py
examples/: 00_basic_example.py  01_emergent_properties.py  02_using_additional_context.py
